# model/Generic.js
@@ -4,7 +4,12 @@ var Promise = require("bluebird");
 var knex = require('../db');
 
 function Generic() {
+  this.kind = "Generic";
   this.tags = {};
+  this.config = {};
+  Object.defineProperty(this, 'config', {
+    enumerable: false
+  });
 };
 
 Generic.prototype.getNodes = function(db, nodes) {
@@ -77,7 +82,7 @@ Generic.prototype.deleteNode = function(db, id, revision) {
           reject({code: "notfound", message: "node not found"});
           return;
         } else {
-          return {code: "success"};
+          return {id: id};
         }
       });
     }).then(function(r) {
@@ -159,77 +164,13 @@ Generic.prototype.load = function(db, id) {
 	  return x;
         });
         self.tags = merged;
-        self.node_id = id;
+        self.id = id;
         self.revision = attributes.Revision;
         self.deleted = attributes.deleted == 1 ? true : false;
-        self.timestamp = attributes.dateOfCreation;
-        self.user_id = attributes.UserID > 0 ? attributes.UserID : null;
+        self.updated = attributes.dateOfCreation;
+        self.userId = attributes.UserID > 0 ? attributes.UserID : null;
 
-        var result = {tags: merged, node_id: id, revision: attributes.Revision, deleted: attributes.deleted == 1 ? true : false, timestamp:  attributes.dateOfCreation, user_id: attributes.UserID > 0 ? attributes.UserID : null, value: value};
-        resolve(result);
-      });
-    });
-  });
-};
-
-Generic.prototype.getNode = function(db, id) {
-  var config = this.config;
-  return new Promise(function(resolve, reject) {
-    var db_id = config.dbs.value().by_name[db].id;
-    config.db(0).where(config.pk, id).where(config.parent, db_id ).select().then(function(result) {
-      if (!result || result.length == 0) {
-        reject({code: "notfound", message: "not found"});
-        return;
-      }
-      var attributes = result[0];
-
-      var p = [];
-      for (var i = 1; i<8; i++) {
-        var columns = ["PK", config.id];
-        if (i != 6)
-          columns.push(config.value);
-        p.push(config.db(i).where(config.pk, id).select(columns));
-      }
-
-      Promise.all(p).then(function(r) {
-        var result = [].concat.apply([], r.map(function(x) {return x}));
-        var merged = {};
-        var value = undefined;
-        var et = config.types.value();
-        var result = result.map(function(v) {
-          var t = v[config.id];
-  	  var field;
-          var val =  v[config.value];
-
-  	  var x = {};
-  	  var wl = et.by_id[t];
-
-          if (et.by_id[t].type_format == 6)
-            val = config.app_url + "/api/blobstore/" + v.PK;
-
-          if (wl && wl.name) {
-		field = wl.name;
-	  } else if (wl) {
-		field = "XXX_SHORTNAME_MISSING_" + et.by_id[t].description;
-	  }
-
-	  if (field) {
-            if (wl != undefined && wl.multiuse == 1) {
-              if (merged[field] != undefined)
-                merged[field].push(val);
-              else 
-	        merged[field] = [val];
-            } else {
-              if (merged[field] != undefined)
-                merged[field] = "MULTIUSE NOT ALLOWED!"; // ABORT!!!
-              else
-	        merged[field] = val;
-            };
-          }
-	  return x;
-        });
-        var result = {tags: merged, node_id: id, revision: attributes.Revision, deleted: attributes.deleted == 1 ? true : false, timestamp:  attributes.dateOfCreation, user_id: attributes.UserID > 0 ? attributes.UserID : null, value: value};
-        resolve(result);
+        resolve(self);
       });
     });
   });
@@ -274,16 +215,5 @@ Generic.prototype.searchNode = function(db, query, deleted, bbox) {
     });
   });
 };
-
-Generic.prototype.config = {
-    app_url: "",
-    pk: 'ServiceEntityID',
-    parent: "ParentServiceID",
-    id: "ServiceEntityPropertiesTypeID",
-    value: "ServiceEntityPropertiesTypeValue",
-    db: null,
-    dbs: null,
-    types: null,
-  };
 
 module.exports = Generic;
